deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fase5-video-processing-api
  namespace: fase5-video-processing-api
  labels:
    app: fase5-video-processing-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fase5-video-processing-api
  template:
    metadata:
      labels:
        app: fase5-video-processing-api
    spec:
      serviceAccountName: fase5-video-processing-api-service-account
      containers:
      - name: fase5-video-processing-api
        image: 814147156565.dkr.ecr.us-east-1.amazonaws.com/fase5-video-processing-api-ecr:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
