deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fase5-video-processing-api-service
  namespace: fase5-video-processing-api
spec:
  selector:
    app: fase5-video-processing-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
