deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fase5-video-processing-api-ingress
  namespace: fase5-video-processing-api
  labels:
    app: fase5-video-processing-api
  annotations:
    alb.ingress.kubernetes.io/group.name: k8s-application-internal-alb-use1
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fase5-video-processing-api-service
                port:
                  number: 80
